# orcal-ai

./: .gitignore  README.md  main.py  pyproject.toml
backend/: main.py
backend/firebase/: firebase_client.py
backend/models/: build_embeddings_request.py  chat_request.py  chat_response.py  generic_response.py  login_request.py  register_request.py  user_response.py
backend/utils/: constants.py  utils.py
cli/: keyword_search_cli.py  rag_cli.py  rrf_search_cli.py  semantic_search_cli.py
lib/augmented_generation/: rag.py  rag_external.py
lib/bm25_search/: inverted_index.py  inverted_index_external_docs.py
lib/hybrid_search/: rrf_search.py  rrf_search_external_docs.py
lib/semantic_search/: semantic_search.py  semantic_search_external_docs.py  user_vector_store_cache.py
lib/utils/: constants.py  data_loader_utils.py  gemini_utils.py  genai_utils.py  local_ai_utils.py  prompt_utils.py  text_utils.py
