[project]
name = "orcal-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.3.0",
    "langchain-chroma>=1.0.0",
    "langchain-community>=0.4.1",
    "nltk>=3.9.2",
    "rank-bm25>=0.2.2",
    "huggingface-hub>=0.34.0,<1.0",
    "sentence-transformers>=5.1.2",
    "langchain-huggingface>=1.0.1",
    "jq>=1.10.0"
]
